enum NetOCE_ArgumentType {
  DOUBLE = 1;
  FLOAT = 2;
  INT32 = 3;
  INT64 = 4;
  UINT32 = 5;
  UINT64 = 6;
  SINT32 = 7;
  SINT64 = 8;
  FIXED32 = 9;
  FIXED64 = 10;
  SFIXED32 = 11;
  SFIXED64 = 12;
  BOOL = 13;
  STRING = 14;
  BYTES = 15;
}

message NetOCE_Argument {
  required NetOCE_ArgumentType type = 3;

  optional double double_value = 4;
  optional float float_value = 5;
  optional int32 int32_value = 6;
  optional int64 int64_value = 7;
  optional uint32 uint32_value = 8;
  optional uint64 uint64_value = 9;
  optional sint32 sint32_value = 10;
  optional sint64 sint64_value = 11;
  optional fixed32 fixed32_value = 12;
  optional fixed64 fixed64_value = 13;
  optional sfixed32 sfixed32_value = 14;
  optional sfixed64 sfixed64_value = 15;
  optional bool bool_value = 16;
  optional string string_value = 17;
  optional bytes bytes_value = 18;
}

message NetOCE_Request {
  required string method = 1;
  repeated NetOCE_Argument arguments = 2;
}
